HV-1975 Remove Security Manager usage